# factory_pattern

./: CMakeLists.txt  README.md
include/: base_interface.hpp  my_factory.hpp  register_macro.hpp
src/: interface_a.cpp  main.cpp  my_factory.cpp
